fix login spacing

--- a/src/stylesheets/login-signup-pages.css
+++ b/src/stylesheets/login-signup-pages.css
@@ -12,6 +12,7 @@
 	border-left: 1px #e60000 solid;
 	min-width: 260px;
 	padding-left: 12px;
+	padding-top: 6px;
 	margin-left: 12px;
 }
 
